// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskList /> render() renders List components for each present list 1`] = `
<div
  className="TaskList"
>
  <h1>
    Your Lists
  </h1>
  <hr />
  <div
    className="list"
    id="list-1"
    key="0"
  >
    <p
      className="delete-list"
      onClick={[Function]}
    >
      X
    </p>
    <List
      id={1}
      items={Array []}
      title="list title"
    />
  </div>
  <div
    className="newList list"
    id="new-list"
  >
    <input
      placeholder="new list title"
      type="text"
    />
    <p
      className="addList"
      onClick={[Function]}
    >
      +
    </p>
  </div>
</div>
`;

exports[`<TaskList /> render() renders a canned error message when an error object is set but without a messsage 1`] = `
<div
  className="TaskList"
>
  <h1>
    Your Lists
  </h1>
  <hr />
  <h3>
    An unknown error occurred
  </h3>
  <div
    className="newList list"
    id="new-list"
  >
    <input
      placeholder="new list title"
      type="text"
    />
    <p
      className="addList"
      onClick={[Function]}
    >
      +
    </p>
  </div>
</div>
`;

exports[`<TaskList /> render() renders a simple message if there are no lists 1`] = `
<div
  className="TaskList"
>
  <h1>
    Your Lists
  </h1>
  <hr />
  <h3>
    No lists! You should create one somehow
  </h3>
  <div
    className="newList list"
    id="new-list"
  >
    <input
      placeholder="new list title"
      type="text"
    />
    <p
      className="addList"
      onClick={[Function]}
    >
      +
    </p>
  </div>
</div>
`;

exports[`<TaskList /> render() renders an error message when state.error has a value 1`] = `
<div
  className="TaskList"
>
  <h1>
    Your Lists
  </h1>
  <hr />
  <h3>
    Error: 
    test error
  </h3>
  <div
    className="newList list"
    id="new-list"
  >
    <input
      placeholder="new list title"
      type="text"
    />
    <p
      className="addList"
      onClick={[Function]}
    >
      +
    </p>
  </div>
</div>
`;

exports[`<TaskList /> render() renders as loading for the initial state 1`] = `
<div
  className="TaskList"
>
  <h1>
    Your Lists
  </h1>
  <hr />
  <p>
    Loading...
  </p>
  <div
    className="newList list"
    id="new-list"
  >
    <input
      placeholder="new list title"
      type="text"
    />
    <p
      className="addList"
      onClick={[Function]}
    >
      +
    </p>
  </div>
</div>
`;
